[project]
name = "echoa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "windlx", email = "1418043337@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=14.1.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
